--- a/.github/workflows/release-pr-prepare.yml
+++ b/.github/workflows/release-pr-prepare.yml
@@ -43,6 +43,7 @@ jobs:
       version: ${{ steps.vars.outputs.version }}
       changelog: ${{ steps.vars.outputs.changelog }}
     env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       COMMIT_PREFIX: ${{ inputs.commit_prefix }}
       PR_BRANCH: ${{ inputs.pr_branch }}
       TARGET_BRANCH: ${{ inputs.target_branch }}
@@ -51,27 +52,29 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # For git-cliff.
+          token: ${{ env.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
 
       - name: Enable `git push` when `act` is run without `--no-skip-checkout`
         if: ${{ env.ACT }}
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
         run: git remote set-url origin "https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git"
 
       - uses: jdx/mise-action@v2
         with:
           install_args: 'gh git-cliff'
         env:
-          GITHUB_TOKEN: ${{ github.token }} # Increase GitHub API rate limits.
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }} # Increase GitHub API rate limits.
       - run: mise use -g gh git-cliff
 
       - uses: fregante/setup-git-user@v2
+        env:
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
 
       - name: Determine version and generate changelog
         shell: bash
         env:
           GITHUB_REPO: ${{ github.repository }} # Used by git-cliff.
-          GITHUB_TOKEN: ${{ github.token }} # Used by gh.
         run: |
           VERSION=$(git-cliff --bumped-version --unreleased)
 
@@ -123,8 +126,6 @@ jobs:
 
       - name: Create or update release-pr pull request
         shell: bash
-        env:
-          GITHUB_TOKEN: ${{ github.token }} # Used by gh.
         run: |
           pr_number=$(gh pr list --state open --head "$PR_BRANCH" --json number --jq '.[0].number')
           if [ -z "$pr_number" ]; then
