--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,9 +9,14 @@ permissions:
   contents: write # To create/update release_pr branch, create a release and a tag.
   pull-requests: write # To create/update PR from release_pr branch.
 
+env:
+  GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
+
 jobs:
   release-pr:
     uses: ./.github/workflows/release-pr.yml
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN || github.token }}
 
   finalize:
     needs: [release-pr]
@@ -28,3 +33,6 @@ jobs:
           body: ${{ needs.release-pr.outputs.changelog }}
           draft: false
           make_latest: true
+          token: ${{ env.GITHUB_TOKEN }}
+        env:
+          GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
