--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -90,6 +90,7 @@ jobs:
           test -n "$VERSION" || {
             echo "::error::Failed to extract version from PR title: '$PR_TITLE'"
             echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
+            sleep 1  # Give time for output to flush.
             exit 1
           }
           VERSION="v${VERSION#v}"
@@ -121,6 +122,7 @@ jobs:
             echo "::notice::Normalized title for release-pr PR #$PR_NUMBER"
           else
             echo "::notice::No changes needed for release-pr PR #$PR_NUMBER"
+            sleep 1  # Give time for output to flush.
             exit 0
           fi
 
