ci: drop annotations on errors

--- a/.github/workflows/release-pr-release.yml
+++ b/.github/workflows/release-pr-release.yml
@@ -99,9 +99,8 @@ jobs:
           fi
           VERSION=$(echo "$release_msg" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
           test -n "$VERSION" || {
-            echo "::error::Failed to extract version from release message: '$release_msg'"
-            echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
-            sleep 3  # Give time for output to flush.
+            echo "Failed to extract version from release message: '$release_msg'"
+            echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
             exit 1
           }
 
@@ -141,12 +140,11 @@ jobs:
             git push origin "$PR_BRANCH" --force
 
             gh pr create --head "$PR_BRANCH" --base "$TARGET_BRANCH" --title "$COMMIT_MSG" --body "$CHANGELOG"
-            echo "::notice::Created new release PR due to race condition"
+            echo "Created new release PR due to race condition"
           else
-            echo "::notice::Found existing release PR #$pr_number"
+            echo "Found existing release PR #$pr_number"
           fi
 
-          sleep 3  # Give time for output to flush.
           exit 1
 
       - name: Create and push release tag
