--- a/.github/workflows/release-pr-prepare.yml
+++ b/.github/workflows/release-pr-prepare.yml
@@ -87,9 +87,8 @@ jobs:
           if [ -n "$pr_title" ]; then
             pr_version=$(echo "$pr_title" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
             test -n "$pr_version" || {
-              echo "::error::Failed to extract version from PR title: '$pr_title'"
-              echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
-              sleep 3  # Give time for output to flush.
+              echo "Failed to extract version from PR title: '$pr_title'"
+              echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
               exit 1
             }
             semver_ge() {
