--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -88,9 +88,8 @@ jobs:
           # (extra spaces, version without "v" prefix).
           VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
           test -n "$VERSION" || {
-            echo "::error::Failed to extract version from PR title: '$PR_TITLE'"
-            echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
-            sleep 3  # Give time for output to flush.
+            echo "Failed to extract version from PR title: '$PR_TITLE'"
+            echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
             exit 1
           }
           VERSION="v${VERSION#v}"
