--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -90,6 +90,7 @@ jobs:
           test -n "$VERSION" || {
             echo "Failed to extract version from PR title: '$PR_TITLE'"
             echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
+            (sleep 0.1; kill -SIGUSR1 $$) & wait # Flush output
             exit 1
           }
           VERSION="v${VERSION#v}"
