--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -84,13 +84,13 @@ jobs:
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_NUMBER: ${{ github.event.number }}
         run: |
+          set -x
           # A manually edited title may differ a bit from auto-generated commit message
           # (extra spaces, version without "v" prefix).
           VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
           test -n "$VERSION" || {
             echo "Failed to extract version from PR title: '$PR_TITLE'"
             echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
-            (sleep 0.1; kill -SIGUSR1 $$) & wait # Flush output
             exit 1
           }
           VERSION="v${VERSION#v}"
