--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -88,11 +88,11 @@ jobs:
           # A manually edited title may differ a bit from auto-generated commit message
           # (extra spaces, version without "v" prefix).
           VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
-          test -n "$VERSION" || {
+          if [ -z "$VERSION" ]; then
             echo "Failed to extract version from PR title: '$PR_TITLE'"
             echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
             exit 1
-          }
+          fi
           VERSION="v${VERSION#v}"
           COMMIT_MSG="$COMMIT_PREFIX $VERSION"
           existing_commit_msg=$(git log -1 --pretty=format:"%s")
