--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -84,16 +84,14 @@ jobs:
           PR_TITLE: ${{ github.event.pull_request.title }}
           PR_NUMBER: ${{ github.event.number }}
         run: |
-          set -x
           # A manually edited title may differ a bit from auto-generated commit message
           # (extra spaces, version without "v" prefix).
-          VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
-          if [ -z "$VERSION" ]; then
-            echo "Failed to extract version from PR title: '$PR_TITLE'"
-            echo "Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
-            head -c 10000 /dev/zero # Flush output.
+          VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?" || true)
+          test -n "$VERSION" || {
+            echo "::error::Failed to extract version from PR title: '$PR_TITLE'"
+            echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
             exit 1
-          fi
+          }
           VERSION="v${VERSION#v}"
           COMMIT_MSG="$COMMIT_PREFIX $VERSION"
           existing_commit_msg=$(git log -1 --pretty=format:"%s")
