--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           # A manually edited title may differ a bit from auto-generated commit message
           # (extra spaces, version without "v" prefix).
-          VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?")
+          VERSION=$(echo "$PR_TITLE" | grep -oP "^\Q${COMMIT_PREFIX}\E\s+\Kv?[0-9]+\.[0-9]+\.[0-9]+(?:-[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?(?:\+[0-9A-Za-z-]+(?:\.[0-9A-Za-z-]+)*)?" || true)
           test -n "$VERSION" || {
             echo "::error::Failed to extract version from PR title: '$PR_TITLE'"
             echo "::notice::Expected format: '$COMMIT_PREFIX v1.2.3' (version may be without 'v' prefix)"
