feat: improve annotations and job names

--- a/.github/workflows/release-pr-release.yml
+++ b/.github/workflows/release-pr-release.yml
@@ -39,7 +39,7 @@ permissions:
   pull-requests: write # To create PR from release_pr branch on race condition.
 
 jobs:
-  main:
+  release:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     outputs:
