--- a/.github/workflows/release-pr-prepare.yml
+++ b/.github/workflows/release-pr-prepare.yml
@@ -39,7 +39,7 @@ permissions:
   pull-requests: write # To create/update PR from release_pr branch.
 
 jobs:
-  main:
+  prepare-pr:
     timeout-minutes: 5
     runs-on: ubuntu-latest
     outputs:
