--- a/.github/workflows/release-pr-release.yml
+++ b/.github/workflows/release-pr-release.yml
@@ -22,13 +22,13 @@ on:
     outputs:
       result:
         description: 'Result: "released" or nothing'
-        value: ${{ jobs.main.outputs.result }}
+        value: ${{ jobs.release.outputs.result }}
       version:
         description: 'Current version'
-        value: ${{ jobs.main.outputs.version }}
+        value: ${{ jobs.release.outputs.version }}
       changelog:
         description: 'Current version changelog'
-        value: ${{ jobs.main.outputs.changelog }}
+        value: ${{ jobs.release.outputs.changelog }}
     secrets:
       TOKEN:
         description: 'Token to use for GitHub API requests.'
