--- a/.github/workflows/release-pr-release.yml
+++ b/.github/workflows/release-pr-release.yml
@@ -124,6 +124,9 @@ jobs:
           echo "::warning::Race condition detected - CHANGELOG.md differs from expected state"
           git diff -- CHANGELOG.md
 
+          # Ensure clean workdir state for $VERSION_CMD.
+          git reset --hard
+
           # Create release-pr branch and PR due to race condition
           pr_number=$(gh pr list --state open --head "$PR_BRANCH" --json number --jq '.[0].number')
           if [ -z "$pr_number" ]; then
@@ -135,7 +138,9 @@ jobs:
               echo "::endgroup::"
             fi
 
-            git add CHANGELOG.md
+            git-cliff --tag "$VERSION" -o CHANGELOG.md
+            git add .
+
             git commit --allow-empty -m "$COMMIT_MSG"
             git push origin "$PR_BRANCH" --force
 
