--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,9 @@ env:
 jobs:
   release-pr:
     uses: ./.github/workflows/release-pr.yml
+    with:
+      version_cmd: |
+        sed -i -E "s#(uses:\s+powerman/workflows/\S+@)(\S+)#\1$RELEASE_PR_VERSION#g" README.md
     secrets:
       TOKEN: ${{ secrets.RELEASE_TOKEN }}
 
