--- a/.github/workflows/release-pr-set-version.yml
+++ b/.github/workflows/release-pr-set-version.yml
@@ -26,6 +26,9 @@ on:
       version:
         description: 'Next version'
         value: ${{ jobs.set-version.outputs.version }}
+      prerelease:
+        description: 'Is this version a prerelease (true/false)'
+        value: ${{ jobs.set-version.outputs.prerelease }}
       changelog:
         description: 'Next version changelog'
         value: ${{ jobs.set-version.outputs.changelog }}
@@ -45,6 +48,7 @@ jobs:
     outputs:
       result: ${{ steps.set-version.outputs.result }}
       version: ${{ steps.set-version.outputs.version }}
+      prerelease: ${{ steps.set-version.outputs.prerelease }}
       changelog: ${{ steps.set-version.outputs.changelog }}
     env:
       GITHUB_TOKEN: ${{ secrets.TOKEN }}
@@ -102,6 +106,10 @@ jobs:
             exit 1
           }
           VERSION="v${VERSION#v}"
+          PRERELEASE=false
+          if echo "$VERSION" | grep -q '[-]'; then
+            PRERELEASE=true
+          fi
           COMMIT_MSG="$COMMIT_PREFIX $VERSION"
           existing_commit_msg=$(git log -1 --pretty=format:"%s")
 
@@ -136,6 +144,7 @@ jobs:
           {
             echo "result=set-version"
             echo "version=$VERSION"
+            echo "prerelease=$PRERELEASE"
             echo "changelog<<EOF"
             echo "$CHANGELOG"
             echo "EOF"
