--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -40,6 +40,9 @@ on:
       changelog:
         description: 'Next (prepared-pr, set-version) or current (released) version changelog'
         value: ${{ jobs.prepare-pr.outputs.changelog || jobs.set-version.outputs.changelog || jobs.release.outputs.changelog }}
+      prerelease:
+        description: 'Is this version a prerelease (true/false)'
+        value: ${{ jobs.prepare-pr.outputs.prerelease || jobs.set-version.outputs.prerelease || jobs.release.outputs.prerelease }}
     secrets:
       TOKEN:
         description: 'Token to use for GitHub API requests.'
