--- a/.github/workflows/release-pr.yml
+++ b/.github/workflows/release-pr.yml
@@ -55,6 +55,10 @@ permissions:
   contents: write # To create/update release_pr branch, create a release and a tag.
   pull-requests: write # To create/update PR from release_pr branch.
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   setup:
     timeout-minutes: 5
