--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -2,25 +2,9 @@ name: Dependency review
 
 on:
   pull_request:
-    branches: [main]
-
-# Ensures review for a previous commit will be completed before reviewing a following commit.
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-
-permissions: {}
+    branches: [main, master]
 
 jobs:
-  dependency-review:
-    runs-on: ubuntu-latest
-    timeout-minutes: 3
-    permissions:
-      contents: read
-      pull-requests: write
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/dependency-review-action@v4
-        with:
-          comment-summary-in-pr: on-failure
+  main:
+    uses: powerman/.github/workflows/dependency-review.yml@main
+    secrets: inherit
