--- a/.github/workflows/lint-pr-title.yml
+++ b/.github/workflows/lint-pr-title.yml
@@ -5,6 +5,8 @@ on:
     types: [opened, edited, synchronize, reopened]
     branches: [main, master]
 
+permissions: {}
+
 jobs:
   main:
     uses: powerman/.github/workflows/lint-pr-title.yml@main
